testsuite/tests/generic_interfaces/missing_impl_struct/test.out
== foo.lkt ==
foo.lkt:12:1: error: Missing implementation for field Interface.method in struct FooStruct
12 | struct FooStruct implements Interface {
   | ^


lkt_compile: Done
